--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <html>
-<SCRIPT>
+<script>
     var pos = 0;
     const pacArray = [
         ['PacMan1.png', 'PacMan2.png'],
@@ -53,7 +53,7 @@
         if (item.position.x + item.velocity.x + item.newimg.width > window.innerWidth ||
             item.position.x + item.velocity.x < 0) item.velocity.x = -item.velocity.x;
         if (item.position.y + item.velocity.y + item.newimg.height > window.innerHeight ||
-            item.position.y + item.velocity.y < 0) item.velocity.y = -item.velocity.y newimg.src='PacMan2.png';
+            item.position.y + item.velocity.y < 0) item.velocity.y = -item.velocity.y;
     }
 
 
